--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div>
   <h2>Login</h2>
   <div class="form">
-    <label for="username">Username</label>
-    <input type="text" [(ngModel)]="username" name="username" />
+    <label for="username">E-mail</label>
+    <input type="text" [(ngModel)]="email" name="email" />
     <label for="password">Password</label>
     <input type="password" [(ngModel)]="password" name="password" />
     <button (click)="login()">Login</button>
